--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,11 @@ canvas#backgroundCanvas {
     width: 24px;
 }
 
+/* .iconShare{
+    height: 2rem;
+    width: 2rem;
+} */
+
 .iconInvert {
     width: 2rem;
     height: 2rem;
@@ -157,7 +162,7 @@ canvas#backgroundCanvas {
     align-items: center;
     justify-content: center;
     padding: 0px 1%;
-    height: 3.75rem;
+    height: 3.0625rem;
     transition: 400ms;
     color: var(--corBrancaTxt);
     margin-top: 25px;
@@ -254,6 +259,7 @@ canvas#backgroundCanvas {
 
 .poppinsBold {
     font-size: 2.96656rem;
+    margin-top: -50px;
 }
 
 /* ------------------ video ------------------- */
@@ -290,7 +296,7 @@ canvas#backgroundCanvas {
 .calendarContainer {
     display: flex;
     flex-direction: row;
-    margin: 5% 10%;
+    margin: 0 5%;
     justify-content: space-between;
 }
 
@@ -323,11 +329,11 @@ canvas#backgroundCanvas {
 }
 
 .calendarBoxLeft {
-    margin-right: 30px;
+    margin-right: 50px;
 }
 
 .calendarBoxRight {
-    margin-left: 30px;
+    margin-left: 50px;
 }
 
 .calendarRowPosition {
@@ -465,6 +471,7 @@ canvas#backgroundCanvas {
     font-family: 'poppinsLight';
     text-align: center;
     margin: 0 100px;
+    opacity: 0.5;
 }
 
 .conteiner_titulo {
@@ -657,6 +664,7 @@ canvas#backgroundCanvas {
 .tituloInfo {
     font-size: 1.99231rem;
     font-family: 'poppinsLight';
+    margin-top: 50px;
 }
 
 
