--- a/css/indexResponsivo.css
+++ b/css/indexResponsivo.css
@@ -16,14 +16,15 @@
 }
 
 @media (max-width: 1060px) {
+
     /* ------------------ calendar --------------------- */
     .calendarContainer {
         flex-wrap: wrap;
         /* flex-direction: column; */
         justify-content: center;
-        
+
     }
-    
+
     .calendarBox {
         margin: 0;
         margin-bottom: 25px;
@@ -31,6 +32,25 @@
 
     .linhasSVG-vertical {
         height: 1000px;
+    }
+
+
+}
+
+@media (max-width: 900px) {
+
+    #location {
+        flex-direction: column-reverse;
+    }
+
+    #locationInfo {
+        width: 100%;
+
+    }
+
+    .video-wrapper {
+        width: 100%;
+        padding-bottom: 60%;
     }
 }
 
