--- a/css/indexResponsivo.css
+++ b/css/indexResponsivo.css
@@ -53,6 +53,11 @@
         padding-bottom: 60%;
     }
 
+    /* --------------------- professores --------------------------- */
+    .professor {
+        width: 40%;
+        margin-bottom: 50px;
+    }
 
 
     /* ------------------------- footer ----------------------- */
@@ -61,8 +66,25 @@
     }
 }
 
+@media (max-width: 750px) {
+
+        /* --------------------- professores --------------------------- */
+        .professor {
+            width: 60%;
+            margin-bottom: 60px;
+        }
+}
+
 @media (max-width: 510px) {
 
+
+    /* -------------------------- professores ------------------------- */
+    .professor {
+        width: 75%;
+        margin-bottom: 60px;
+    }
+
+    /* ----------------------- footer -------------------- */
     .nav-footer {
         margin: 0px;
     }
@@ -74,6 +96,10 @@
     .underInfoFooter {
         margin-top: 50px;
     }
+}
+
+@media (max-width: 350px) {
+    
 }
 
 
