--- a/css/carrosselDouble.css
+++ b/css/carrosselDouble.css
@@ -77,7 +77,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: #a0a0a0;
     transition: 0.4s;
     border-radius: 34px;
 }
@@ -287,4 +287,9 @@ input:checked + label .description {
         right: -6px;
         top: -26px;
     }
+
+    .card {
+        opacity: 1;
+    }
+
 }
