--- a/css/carrosselDouble.css
+++ b/css/carrosselDouble.css
@@ -6,7 +6,6 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
-    top: -40px;
 }
 
 /* Adicionando o estilo para as setas */
@@ -28,7 +27,7 @@
     padding: 10px;
     cursor: pointer;
     font-size: 24px;
-    border-radius: 50%;
+    border-radius: 15px;
     transition: background-color 0.3s ease;
 }
 
@@ -37,7 +36,6 @@
 }
 
 #toggleImagesBtn {
-    margin-bottom: 20px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -45,31 +43,30 @@
 
 /* Posicionando o botão no canto esquerdo */
 .switch-container {
-    position: absolute;
+    /* position: absolute; */
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 20px;
+    background-color: #fff;
 }
 
 /* Switch styles */
+/* Estilo do Switch */
 .switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    top:-35px;
-    right: 20%;
 }
 
+/* Input invisível */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
+/* Slider visível */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -77,11 +74,12 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #a0a0a0;
+    background-color: #5f5f5f; /* Fundo do slider */
     transition: 0.4s;
     border-radius: 34px;
 }
 
+/* Bola dentro do slider */
 .slider:before {
     position: absolute;
     content: "";
@@ -94,6 +92,7 @@
     transition: 0.4s;
 }
 
+/* Quando o switch está ativado */
 input:checked + .slider {
     background-color: #ff0000;
 }
@@ -134,18 +133,18 @@ input:checked + .slider:before {
     box-shadow: 0px 15px 40px -5px rgba(0, 0, 0, 0.8);
 }
 
-input:checked + label {
+input:checked+label {
     opacity: 1;
     width: 35%;
 }
 
-.card > .row {
+.card>.row {
     color: white;
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card > .row > .icon {
+.card>.row>.icon {
     background: #223;
     color: white;
     border-radius: 50%;
@@ -157,7 +156,7 @@ input:checked + label {
     margin: 15px;
 }
 
-.card > .row > .description {
+.card>.row>.description {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -183,7 +182,7 @@ input {
     display: none;
 }
 
-input:checked + label .description {
+input:checked+label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
@@ -240,22 +239,35 @@ input:checked + label .description {
     z-index: 10000;
 }
 
+/* Container principal */
+#boxProjControls {
+    display: flex;
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#projetos-title {
+    margin: 0;
+}
+
 
 /* CSS para o texto "Dia1" e "Dia2" */
 #dayLabel {
-    position: absolute;
-    top: -23px;
-    right: 28%;
     font-size: 25px;
     font-weight: bold;
     color: #ffffff;
     transition: all 0.3s ease;
-    font-family:'orbitron';
+    font-family: 'orbitron';
+
+
 }
 
 /* CSS para ocultar a barra de navegação quando em fullscreen */
 .header.fullscreen-hidden {
-    display: none; /* Usando display: none para esconder a barra de navegação */
+    display: none;
+    /* Usando display: none para esconder a barra de navegação */
 }
 
 @media (max-width: 550px) {
@@ -280,16 +292,17 @@ input:checked + label .description {
         height: 34px;
         margin-top: 2%;
         margin-bottom: 2%;
-        right: 40%;
-    }
 
-    #dayLabel {
-        right: -6px;
-        top: -26px;
     }
 
     .card {
         opacity: 1;
     }
 
+}
+
+@media (max-width: 375px) {
+    #dayLabel {
+        font-size: 20px;
+    }
 }
