--- a/css/indexResponsivo.css
+++ b/css/indexResponsivo.css
@@ -73,6 +73,14 @@
             width: 60%;
             margin-bottom: 60px;
         }
+
+        .professoresContainer-noPic {
+            flex-direction: column;
+        }
+        .infoBox-professor-noPic {
+            margin: 5% 0%;
+            width: 75%;
+        }
 }
 
 @media (max-width: 510px) {
