--- a/css/style.css
+++ b/css/style.css
@@ -426,6 +426,30 @@ canvas#backgroundCanvas {
     text-align: center;
 }
 
+/* profs sem foto */
+.professoresContainer-noPic {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.infoBox-professor-noPic {
+    display: flex;
+    background-color: var(--corBgCardsLighter);
+    justify-content: center;
+    align-items: center;
+    width: 25%;
+    padding: 4% 0;
+    margin: 0% 2%;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+
+
 .imgProfessor {
     width: 100%;
     pointer-events: none;
