--- a/css/carrosselDouble.css
+++ b/css/carrosselDouble.css
@@ -1,3 +1,7 @@
+.projetosTitle{
+    display: flex;
+}
+
 .carousel {
     width: 100%;
     height: 100%;
@@ -6,6 +10,7 @@
     justify-content: center;
     flex-direction: column;
     position: relative;
+    top: -40px;
 }
 
 /* Adicionando o estilo para as setas */
@@ -27,7 +32,7 @@
     padding: 10px;
     cursor: pointer;
     font-size: 24px;
-    border-radius: 15px;
+    border-radius: 50%;
     transition: background-color 0.3s ease;
 }
 
@@ -36,6 +41,7 @@
 }
 
 #toggleImagesBtn {
+    margin-bottom: 20px;
     padding: 10px 20px;
     font-size: 16px;
     cursor: pointer;
@@ -43,30 +49,31 @@
 
 /* Posicionando o botão no canto esquerdo */
 .switch-container {
-    /* position: absolute; */
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
+    margin-top: 20px;
 }
 
 /* Switch styles */
-/* Estilo do Switch */
 .switch {
     position: relative;
     display: inline-block;
     width: 60px;
     height: 34px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    top:-20px;
+    left: 35%;
 }
 
-/* Input invisível */
 .switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-/* Slider visível */
 .slider {
     position: absolute;
     cursor: pointer;
@@ -74,12 +81,11 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #5f5f5f; /* Fundo do slider */
+    background-color: #ccc;
     transition: 0.4s;
     border-radius: 34px;
 }
 
-/* Bola dentro do slider */
 .slider:before {
     position: absolute;
     content: "";
@@ -92,7 +98,6 @@
     transition: 0.4s;
 }
 
-/* Quando o switch está ativado */
 input:checked + .slider {
     background-color: #ff0000;
 }
@@ -102,8 +107,8 @@ input:checked + .slider:before {
 }
 
 .caroussel-container {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 90vh;
     display: flex;
     flex-wrap: nowrap;
     justify-content: start;
@@ -125,26 +130,29 @@ input:checked + .slider:before {
     align-items: flex-end;
     box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
     opacity: 0.6;
-    transition: opacity 0.3s ease, box-shadow 0.3s ease;
+    transition: all 0.5s ease;
 }
+
+
 
 .card:hover {
     opacity: 1;
     box-shadow: 0px 15px 40px -5px rgba(0, 0, 0, 0.8);
 }
 
-input:checked+label {
+
+input:checked + label {
     opacity: 1;
-    width: 35%;
+    width: 40%;
 }
 
-.card>.row {
+.card > .row {
     color: white;
     display: flex;
     flex-wrap: nowrap;
 }
 
-.card>.row>.icon {
+.card > .row > .icon {
     background: #223;
     color: white;
     border-radius: 50%;
@@ -156,7 +164,7 @@ input:checked+label {
     margin: 15px;
 }
 
-.card>.row>.description {
+.card > .row > .description {
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -182,7 +190,7 @@ input {
     display: none;
 }
 
-input:checked+label .description {
+input:checked + label .description {
     opacity: 1 !important;
     transform: translateY(0) !important;
 }
@@ -239,41 +247,52 @@ input:checked+label .description {
     z-index: 10000;
 }
 
-/* Container principal */
-#boxProjControls {
-    display: flex;
-    position: relative;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-#projetos-title {
-    margin: 0;
-}
-
 
 /* CSS para o texto "Dia1" e "Dia2" */
 #dayLabel {
+    position: absolute;
+    top: -8px;
+    left:90%;
     font-size: 25px;
     font-weight: bold;
     color: #ffffff;
     transition: all 0.3s ease;
-    font-family: 'orbitron';
-
-
+    font-family:'orbitron';
 }
 
 /* CSS para ocultar a barra de navegação quando em fullscreen */
 .header.fullscreen-hidden {
-    display: none;
-    /* Usando display: none para esconder a barra de navegação */
+    display: none; /* Usando display: none para esconder a barra de navegação */
 }
+/*para o efeito no primeiro card */
+.card.highlight {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.6); /* Adiciona um fundo escuro */
+    position: relative;
+}
+
+.instruction-overlay {
+    width: 80%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.779);
+    padding: 20px;
+    border-radius: 10px;
+    font-size: 14px;
+    z-index: 100;
+    
+}
+
 
 @media (max-width: 550px) {
     .caroussel-container {
         overflow: hidden;
         width: 80%;
+        height: auto;
         display: flex;
         flex-wrap: nowrap;
         scroll-snap-type: x mandatory;
@@ -292,17 +311,17 @@ input:checked+label .description {
         height: 34px;
         margin-top: 2%;
         margin-bottom: 2%;
+       top: -10px;
+        left: 13%;
+    }
 
+    #dayLabel {
+        left: 76%;
+        top:-3px;
     }
 
     .card {
         opacity: 1;
     }
 
-}
-
-@media (max-width: 375px) {
-    #dayLabel {
-        font-size: 20px;
-    }
 }
